# saorsa-mls

./: .gitignore  .tsan-suppressions.txt  .typos.toml  CHANGELOG.md  CRYPTO_CONSOLIDATION.md  Cargo.toml  LICENSE-AGPL-3.0  MLS_IMPLEMENTATION.md  ML_DSA_VERIFY_BUG_ANALYSIS.md  README.md  SECURITY.md  SPEC-2.md  SPEC-PROD.md  deny.toml
.github/: dependabot.yml
.github/workflows/: README.md  benchmark.yml  coverage.yml  quality.yml  release.yml  rust.yml  rust.yml.old  security.yml  test.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
benches/: crypto_benchmarks.rs
docs/: slh-dsa-verification-plan.md
src/: api.rs  crypto.rs  group.rs  group.rs.backup  group_fixed.rs  lib.rs  member.rs  protocol.rs  quic_integration.rs
tests/: api_suite.rs  audit_logging_tests.rs  ciphersuite_negotiation.rs  credential_validation_tests.rs  exporter_tests.rs  fips_kat_tests.rs  fs_pcs_tests.rs  hpke_tests.rs  join_processing.rs  keypackage_verification_tests.rs  message_auth.rs  ml_dsa_verify_deep_test.rs  rekey_policy_tests.rs  slh_dsa_tests.rs  welcome_secrets.rs
