[package]
name = "saorsa-mls"
version = "0.1.0"
edition = "2024"
authors = ["Saorsa Labs Limited <saorsalabs@gmail.com>"]
license = "AGPL-3.0"
description = "Message Layer Security (MLS) protocol implementation for P2P secure group communication"
repository = "https://github.com/dirvine/saorsa-mls-foundation"
homepage = "https://github.com/dirvine/saorsa-mls-foundation"
documentation = "https://docs.rs/saorsa-mls"
readme = "README.md"
keywords = ["mls", "encryption", "group", "forward-secrecy", "p2p"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["serde"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
blake3 = "1.5"
sha2 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }

# HKDF and key derivation
hkdf = "0.12"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Logging
tracing = "0.1"

# Data structures
dashmap = "6.0"
parking_lot = "0.12"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
quickcheck = "1.0"
quickcheck_macros = "1.0"
pretty_assertions = "1.4"
tokio-test = "0.4"

[features]
default = []
test-utils = []